--- a/views/public/html/status.html
+++ b/views/public/html/status.html
@@ -551,7 +551,7 @@
             <script>
                     </script>
             
-            <div class="container-fluid">
+            <div class="container-fluid mt-3">
               <h4 class="text-dark">Discussion Status</h4>
               <form id="statusForm">
                 <div class="mb-3">
