--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -907,7 +907,7 @@
                                                 <div class="col-md-6 mb-0">
                                                     <div class="form-floating">
                                                         <input
-                                                            type="file"
+                                                            type="text"
                                                             class="form-control"
                                                             id="edit_candidate_photos"
                                                             placeholder="Field X"
@@ -921,7 +921,7 @@
                                                 <div class="col-md-6 mb-0">
                                                     <div class="form-floating">
                                                         <input
-                                                            type="file"
+                                                            type="text"
                                                             class="form-control"
                                                             id="edit_candidate_resume"
                                                             placeholder="Field X"
