--- a/views/public/html/status.html
+++ b/views/public/html/status.html
@@ -604,9 +604,9 @@
                     const endDate = document.getElementById('endDate').value;
         
                     const params ={
-                        companyName:companyName,
-                        startDate:startDate,
-                        endDate:endDate
+                        companyName,
+                        startDate,
+                        endDate
                     }
 console.log(params)
 const decodedToken = decodeToken(token)
