--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -595,6 +595,7 @@
                                 <li><a class="dropdown-item" id="medicals">> MEDICALS</a></li>
                                 <li><a class="dropdown-item" id="nkd">> NKD</a></li>
                                 <li><a class="dropdown-item" id="seaservice">> SEASERVICE</a></li>
+                                <li><a class="dropdown-item" id="evaluation">> EVALUATION</a></li>
 
                             </ul>
                         </div>
