--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -723,6 +723,7 @@
                     <span><a href="./queries.html">Queries and Suggestions</a></span>
                     <span><a href="./status.html"> Status</a></span>
                     <span><a href="./report.html"> Report</a></span>
+                    <span><a href="./aaaa.html"> Test</a></span>
 
 
 
