--- a/views/public/html/aaaa.html
+++ b/views/public/html/aaaa.html
@@ -541,123 +541,10 @@
           <div class="container" id="settingsContainer">
 
             
-
-            <div class="content-wrapper">
-              <!-- Content -->
-              <div class="w-100 mt-3">
-                
-                <div class="card mb-4">
-                  <h5 class="card-header">Add Customers</h5>
-                  <div class="card-body">
-                      <form id="company-form">
-                          <div class="mb-3 row">
-                              <label for="company_name" class="col-md-2 col-form-label">Name</label>
-                              <div class="col-md-10">
-                                  <input type="text" class="form-control" id="company_name" placeholder="Enter company name" required>
-                              </div>
-                          </div>
-              
-                          <div class="mb-3 row">
-                              <label class="col-md-2 col-form-label">Business Type</label>
-                              <div class="col-md-10 d-flex align-items-center">
-                                  <div class="form-check form-check-inline">
-                                      <input class="form-check-input" type="radio" id="fms" name="business_type" value="FMS" required>
-                                      <label class="form-check-label" for="fms">FMS</label>
-                                  </div>
-                                  <div class="form-check form-check-inline ms-2">
-                                      <input class="form-check-input" type="radio" id="fpp" name="business_type" value="FPP" required>
-                                      <label class="form-check-label" for="fpp">FPP</label>
-                                  </div>
-                              </div>
-                          </div>
-              
-                          <div class="mb-3 row">
-                              <label for="company_contact" class="col-md-2 col-form-label">Contact Person</label>
-                              <div class="col-md-10">
-                                  <input type="text" class="form-control" id="company_contact" placeholder="Enter contact person" required>
-                              </div>
-                          </div>
-              
-                          <div class="mb-3 row">
-                              <label for="company_address" class="col-md-2 col-form-label">Address</label>
-                              <div class="col-md-10">
-                                  <input type="text" class="form-control" id="company_address" placeholder="Enter address" required>
-                              </div>
-                          </div>
-              
-                          <div class="mb-3 row">
-                              <label for="company_email" class="col-md-2 col-form-label">Email</label>
-                              <div class="col-md-10">
-                                  <input type="email" class="form-control" id="company_email" placeholder="Enter email" required>
-                              </div>
-                          </div>
-              
-                          <div class="mb-3 row">
-                              <label for="company_phone" class="col-md-2 col-form-label">Phone No</label>
-                              <div class="col-md-10">
-                                  <input type="tel" class="form-control" id="company_phone" placeholder="Enter phone number" required>
-                              </div>
-                          </div>
-              
-                          <div class="mb-3 row">
-                              <label for="company_management" class="col-md-2 col-form-label">Management Type</label>
-                              <div class="col-md-10">
-                                  <select class="form-select" id="company_management" required>
-                                      <option value="" selected disabled>Select Management Type</option>
-                                      <option value="Owners">Owners</option>
-                                      <option value="Managers">Managers</option>
-                                  </select>
-                              </div>
-                          </div>
-              
-                          <div class="mb-3 row">
-                              <label for="company_last_update" class="col-md-2 col-form-label">Last Update</label>
-                              <div class="col-md-10">
-                                  <input type="date" class="form-control" id="company_last_update" required>
-                              </div>
-                          </div>
-              
-                          <div class="row">
-                              <div class=" text-end">
-                                  <button type="submit" class="btn btn-primary">Add Company</button>
-                              </div>
-                          </div>
-                      </form>
-                  </div>
-              </div>
-              <div class="position-absolute p-3" style="z-index: 11">
-    <div id="successToast" class="toast align-items-center text-white bg-success" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="2000">
-        <div class="d-flex">
-            <div class="toast-body">
-                Company Added Successfully!
+            <div id="imageContainer">
+                <img src="https://nemo.ivistaz.co/views/public/files/23_AFF.pdf" alt="Description of the image">
             </div>
-            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-    </div>
-    <div id="errorToast" class="toast align-items-center text-white bg-danger" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="2000">
-        <div class="d-flex">
-            <div class="toast-body">
-                Error: Company could not be added.
-            </div>
-            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-    </div>
-</div>
-
-              
-              
-              
-              
-              </div>
-            </div>
-          </div>
-          
-            <div class="mt-5 p-5 text-center" id="settingsCard" style="display: none;">
-              <h4>
-                Permission Required! Contact Admin.
-                  </h4>
-                  <p>For more details regarding permission visit <strong class="text-primary">My Profile</strong></p>
-            </div>
+           
                     <!-- /Account -->
                       <!-- / Content -->
 
