--- a/views/public/html/aaaa.html
+++ b/views/public/html/aaaa.html
@@ -541,8 +541,8 @@
           <div class="container" id="settingsContainer">
 
             
-            <div id="imageContainer">
-                <img src="https://nemo.ivistaz.co/views/public/files/23_AFF.pdf" alt="Description of the image">
+            <div id="pdfContainer">
+                <iframe src="https://nemo.ivistaz.co/views/public/files/23_AFF.pdf" width="100%" height="600px"></iframe>
             </div>
            
                     <!-- /Account -->
