--- a/views/public/html/aaaa.html
+++ b/views/public/html/aaaa.html
@@ -544,6 +544,9 @@
             <div id="pdfContainer">
                 <iframe src="https://nemo.ivistaz.co/views/public/files/23_AFF.pdf" width="100%" height="600px"></iframe>
             </div>
+            <div id="imageContainer">
+                <img src="https://nemo.ivistaz.co/views/public/files/photos/1_Somesh passport 1.JPG" alt="Description of the image">
+            </div>
            
                     <!-- /Account -->
                       <!-- / Content -->
