--- a/views/public/html/aaaa.html
+++ b/views/public/html/aaaa.html
@@ -545,7 +545,7 @@
                 <iframe src="https://nemo.ivistaz.co/views/public/files/23_AFF.pdf" width="100%" height="600px"></iframe>
             </div>
             <div id="imageContainer">
-                <img src="https://nemo.ivistaz.co/views/public/files/photos/1050_photo.jpg" alt="Description of the image">
+                <img src="https://nemo.ivistaz.co/views/public/files/photos/1_Somesh%202nd%20mate.JPG" alt="Description of the image">
             </div>
            
                     <!-- /Account -->
