--- a/views/public/html/aaaa.html
+++ b/views/public/html/aaaa.html
@@ -547,6 +547,13 @@
             <div id="imageContainer">
                 <img src="/photos/1_Somesh 2nd mate.JPG" alt="Description of the image">
             </div>
+            <div id="imageContainer1">
+                <img src="/tickets/175_Rajesh Yadawa PAN Card Copy.jpg" alt="Description of the image">
+            </div>
+            <div id="imageContainer2">
+                <img src="/resume/1032_Capt Parwez shamsh - Tanker.doc" alt="Description of the image">
+                <img src="/resume/1014_NS 01 Nautilus Application Form of EO.xlsx" alt="Description of the image">
+            </div>
            
                     <!-- /Account -->
                       <!-- / Content -->
