--- a/views/public/html/aaaa.html
+++ b/views/public/html/aaaa.html
@@ -551,8 +551,8 @@
                 <img src="/tickets/175_Rajesh Yadawa PAN Card Copy.jpg" alt="Description of the image">
             </div>
             <div id="imageContainer2">
-                <img src="/resume/1032_Capt Parwez shamsh - Tanker.doc" alt="Description of the image">
-                <img src="/resume/1014_NS 01 Nautilus Application Form of EO.xlsx" alt="Description of the image">
+                <iframe src="/resume/1032_Capt Parwez shamsh - Tanker.doc" alt="Description of the image"></iframe>
+                <iframe src="/resume/1014_NS 01 Nautilus Application Form of EO.xlsx" alt="Description of the image"></iframe>
             </div>
            
                     <!-- /Account -->
