--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -615,6 +615,7 @@
                                         <!-- First set of input fields -->
                                         <div class="card-body pb-0">
                                             <div class="row">
+                                              
                                                 <div class="col-md-6 mb-0">
                                                     <div class="form-floating">
                                                       <input type="hidden" id="candidateId">
@@ -906,17 +907,7 @@
                                         <div class="card-body pb-0">
                                             <div class="row">
                                                 <div class="col-md-6 mb-0">
-                                                    <div class="form-floating">
-                                                        <input
-                                                            type="text"
-                                                            class="form-control"
-                                                            id="edit_candidate_photos"
-                                                            placeholder="Field X"
-                                                            aria-describedby="fieldX_1_Help"
-                                                            required
-                                                        />
-                                                        <label for="edit_candidate_photos">Photo</label>
-                                                    </div>
+                                                    <div id="edit_candidate_photos"></div>
                                                 </div>
                         
                                                 <div class="col-md-6 mb-0">
