--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -907,7 +907,10 @@
                                         <div class="card-body pb-0">
                                             <div class="row">
                                                 <div class="col-md-6 mb-0">
-                                                    <div id="edit_candidate_photos"></div>
+                                                  <input type="hidden" id="edit_candidate_photos">
+                                                  <div id="imageContainer">
+                                                    <img src="" alt="Candidate Photo">
+                                                </div>
                                                 </div>
                         
                                                 <div class="col-md-6 mb-0">
