--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -908,8 +908,11 @@
                                             <div class="row">
                                                 <div class="col-md-6 mb-0">
                                                   <input type="hidden" id="edit_candidate_photos">
-                                                  <div id="imageContainer">
-                                                    <img src="" alt="Candidate Photo">
+                                                  <div class="col-md-6 mb-0">
+                                                    <!-- No need for the hidden input here -->
+                                                    <div id="imageContainer">
+                                                        <img src="" alt="Candidate Photo">
+                                                    </div>
                                                 </div>
                                                 </div>
                         
