--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -614,6 +614,12 @@
 
                                         <!-- First set of input fields -->
                                         <div class="card-body pb-0">
+                                          <div class="col-md-6 mb-0">
+                                            <!-- No need for the hidden input here -->
+                                            <div id="imageContainer">
+                                                <img src="" alt="Candidate Photo">
+                                            </div>
+                                        </div>
                                             <div class="row">
                                               
                                                 <div class="col-md-6 mb-0">
@@ -907,13 +913,17 @@
                                         <div class="card-body pb-0">
                                             <div class="row">
                                                 <div class="col-md-6 mb-0">
-                                                  <input type="hidden" id="edit_candidate_photos">
-                                                  <div class="col-md-6 mb-0">
-                                                    <!-- No need for the hidden input here -->
-                                                    <div id="imageContainer">
-                                                        <img src="" alt="Candidate Photo">
+                                                    <div class="form-floating">
+                                                        <input
+                                                            type="text"
+                                                            class="form-control"
+                                                            id="edit_candidate_photos"
+                                                            placeholder="Field X"
+                                                            aria-describedby="fieldX_1_Help"
+                                                            required
+                                                        />
+                                                        <label for="edit_candidate_photos">Photo</label>
                                                     </div>
-                                                </div>
                                                 </div>
                         
                                                 <div class="col-md-6 mb-0">
