--- a/views/public/html/galley-form.html
+++ b/views/public/html/galley-form.html
@@ -480,7 +480,18 @@ doc.text(`Last Employer - Reason for Leaving: ${formData.get('reasonForLeaving')
     doc.text(`Interviewer Name: ${formData.get('interviewer_name')}`, 10, 230);
     doc.text(`Date: ${formData.get('date')}`, 10, 250);
 
-    doc.save('form-data.pdf');
+    const candidateId = formData.get('name') || 'no name provided';
+    const now = new Date();
+
+    const formattedDate = now.toISOString().replace(/T/, '_').replace(/:/g, '-').split('.')[0];
+    const milliseconds = now.getMilliseconds().toString().padStart(3, '0');
+
+    const fileName = `${candidateId}_${formattedDate}-${milliseconds}.pdf`;
+
+
+    doc.save(fileName);
+
+   
 }
 
 
