forms new one 1

--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1495,6 +1495,8 @@
                                               <!-- Table rows will be dynamically inserted here -->
                                           </tbody>
                                       </table>
+                                      <div id="fileListContainer"></div>
+
                                   </div>
                               </div>
                             </div>
