forms new one 2

--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1495,7 +1495,7 @@
                                               <!-- Table rows will be dynamically inserted here -->
                                           </tbody>
                                       </table>
-                                      <div id="fileListContainer"></div>
+                                      <div id="fileListContainer">Evaluation Files</div>
 
                                   </div>
                               </div>
