--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -906,6 +906,18 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card-body pb-0 pt-2 ">
+                         <div class="col-md-12">
+                                <div class="form-floating">
+                                    <select id="candidate_us_visa" class="form-select" required>
+                                        <option value="" disabled selected>-- Select Option --</option>
+                                        <option value="1">Yes</option>
+                                        <option value="0">No</option>
+\                                    </select>
+                                    <label for="candidate_us_visa">US Visa</label>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card-body pb-0 pt-2">
                             <div class="row">
                                 <div class="col-md-6 mb-0">
