--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -950,6 +950,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card-body pb-0 pt-4 ">
+                      <div class="col-md-12">
+                             <div class="form-floating">
+                                 <select id="candidate_us_visa" class="form-select" required>
+                                     <option value="" disabled selected>-- Select Option --</option>
+                                     <option value="1">Yes</option>
+                                     <option value="0">No</option>
+\                                    </select>
+                                 <label for="candidate_us_visa">US Visa</label>
+                             </div>
+                         </div>
+                     </div>
                     <div class="card-body pb-0">
                         <div class="row">
                             <div class="col-md-6 mb-0">
