--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -953,12 +953,12 @@
                     <div class="card-body pb-0 pt-4 ">
                       <div class="col-md-12">
                              <div class="form-floating">
-                                 <select id="candidate_us_visa" class="form-select" required>
+                                 <select id="edit_candidate_us_visa" class="form-select" required>
                                      <option value="" disabled selected>-- Select Option --</option>
                                      <option value="1">Yes</option>
                                      <option value="0">No</option>
 \                                    </select>
-                                 <label for="candidate_us_visa">US Visa</label>
+                                 <label for="edit_candidate_us_visa">US Visa</label>
                              </div>
                          </div>
                      </div>
