--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -910,6 +910,18 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="card-body pb-0 pt-4 ">
+                                          <div class="col-md-12">
+                                                 <div class="form-floating">
+                                                     <select id="edit_candidate_us_visa" class="form-select" required>
+                                                         <option value="" disabled selected>-- Select Option --</option>
+                                                         <option value="1">Yes</option>
+                                                         <option value="0">No</option>
+                    \                                    </select>
+                                                     <label for="edit_candidate_us_visa">US Visa</label>
+                                                 </div>
+                                             </div>
+                                         </div>
                                         <div class="card-body pb-0">
                                             <div class="row">
                                                 <div class="col-md-6 mb-0">
