--- a/views/public/html/reminder-document.html
+++ b/views/public/html/reminder-document.html
@@ -541,10 +541,11 @@
           <!-- / Navbar -->
 
           <!-- Content wrapper -->
+          
           <div class="container-fluid">
-            <a href='./indexpage.html' class="btn btn-primary float-end mt-3" >  Back to Dashboard</a>
+            <a href='./indexpage.html' class="btn btn-primary  mt-3" >  Back to Dashboard</a>
 
-            <div class="p-3">
+            <div class="p-3 card mt-3">
                 <h4>Documents with Approaching Expiry Dates</h4>
                 <div id="loader" class="text-center" style="display: none;">
                     Loading...
@@ -574,7 +575,7 @@
                     <tbody></tbody>
                 </table>
             </div>
-        
+
             <!-- Bootstrap JS and Axios -->
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
