--- a/views/public/html/reminder.html
+++ b/views/public/html/reminder.html
@@ -536,12 +536,12 @@
 
           <!-- Content wrapper -->
           <div class="container-fluid">
-            <a href="./indexpage.html" class="float-end btn btn-primary mt-3">Back to Dashboard</a>
-
-            <div class="row mt-5">
+            <a href="./indexpage.html" class=" btn btn-primary mt-3 mb-3">Back to Dashboard</a>
+            <div class="card p-3">
+            <div class="row mt-3">
 
                 <div class="col">
-                    <h2 class="text-center">Discussion Reminders</h2>
+                    <h4 class="">Discussion Reminders</h4>
                 </div>
             </div>
             <div class="row mt-3">
@@ -574,6 +574,7 @@
                 </div>
             </div>
         </div>
+          </div>
         <script>
           document.addEventListener('DOMContentLoaded', async () => {
               const dateFilterForm = document.getElementById('dateFilterForm');
