--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -676,9 +676,9 @@
 
     <!-- / Content -->
     <div class="container p-4">
-      <a href="./indexpage.html" class="btn btn-primary float-end ">Back to Dashboard</a>
-
-        <h1>Reports</h1>
+      <a href="./indexpage.html" class="btn btn-primary mb-3 ">Back to Dashboard</a>
+      <div class="card p-3">
+        <h4>Reports</h4>
 
         <div class="dropdown mb-3">
           <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -874,7 +874,7 @@
         
           
           </div>
-          <p class=" mb-0 pb-0 text-end" style="font-size: 10px;" > <strong class="text-primary">Note : </strong>Scroll Horizontally if multiple fields are selected</p>
+          <p class=" mb-0 pb-0 mt-1 text-end" style="font-size: 10px;" > <strong class="text-primary">Note : </strong>Scroll Horizontally if multiple fields are selected</p>
           <div class=" rounded-3 bg-white">
            
           <div id="candidateTable" style="overflow-x: scroll;"></div>
@@ -1458,6 +1458,7 @@
                   <div id="totalPagesContracts"></div>
               </div>
           </div>
+      </div>
       </div>
       <!-- Bootstrap JS and jQuery -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
