--- a/views/public/html/status.html
+++ b/views/public/html/status.html
@@ -541,17 +541,18 @@
           
           <!-- Content wrapper -->
           <div class="container-fluid" >
-            <div class="container-fluid ">
-              <a href="./indexpage.html" class="btn btn-primary float-end"> Back to Dashboard</a>
-                <h2 class="ms-0 mt-3">Todays All Discussions</h2>
+            <a href="./indexpage.html" class="btn btn-primary mt-3 mb-3"> Back to Dashboard</a>
 
-                <ul id="discussionList" class="list-group mt-3 border border-secondary-subtle"></ul>
+            <div class="container-fluid card">
+                <h4 class="ms-0 mt-3">Todays All Discussions</h4>
+
+                <ul id="discussionList" class="list-group mt-3 border border-secondary-subtle mb-3"></ul>
             </div>
             
             <script>
                     </script>
             
-            <div class="container-fluid mt-3">
+            <div class="container-fluid mt-3 card p-3">
               <h4 class="text-dark">Discussion Status</h4>
               <form id="statusForm">
                 <div class="mb-3">
@@ -573,7 +574,7 @@
               </form>
             </div>
         
-            <div id="statusResults">
+            <div id="statusResults" class="card p-3 mt-3 mb-3">
               <!-- Status Container -->
               <div class="status-container">
                 <!-- Status Header -->
