--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -72,23 +72,159 @@
   display: none;
 }
 
-.quarter {
-    display:flex;
-    justify-content: space-between;
-    border: 1px dashed #ccc;
-    padding: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-  }
-  .avatar {
-    width: 40px; /* Adjust size as needed */
-    height: 40px; /* Adjust size as needed */
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.initials {
-    font-size: 20px; /* Adjust font size as needed */
-    color: white; /* Adjust text color as needed */
-}
+
+
+  a {
+    display: inline-block;
+    text-decoration: none;
+  }
+
+  .container {
+    margin-top: 5em;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+    gap: 2rem;
+
+
+
+      ul {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 0.625rem;
+
+        li {
+          text-transform: uppercase;
+          background: var(--clr-tag);
+          color: #282828;
+          font-weight: 700;
+          font-size: 0.8rem;
+          padding: 0.375rem 0.625rem;
+          border-radius: 0.188rem;
+        }
+
+        .branding {
+          color: darken(#d3b19a, 40%);
+        }
+
+        .packaging {
+          color: darken(#70b3b1, 40%);
+        }
+
+        .marketing {
+          color: darken(#d05fa2, 40%);
+        }
+      }
+
+      .content {
+        padding: 0.938rem 0.625rem;
+
+        h3 {
+          text-transform: capitalize;
+          font-size: clamp(1.5rem, 1.3909rem + 0.4364vw, 1.8rem);
+        }
+
+        p {
+          margin: 0.625rem 0 1.25rem;
+          color: #565656;
+        }
+      }
+    }
+
+    .card-inner {
+      position: relative;
+      width: inherit;
+      height: 18.75rem;
+      background: var(--clr);
+      border-radius: 1.25rem;
+      border-bottom-right-radius: 0;
+      overflow: hidden;
+
+      .box {
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        border-radius: 1.25rem;
+        overflow: hidden;
+
+        .imgBox {
+          position: absolute;
+          inset: 0;
+
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+
+        .icon {
+          position: absolute;
+          bottom: -0.375rem;
+          right: -0.375rem;
+          width: 6rem;
+          height: 6rem;
+          background: var(--clr);
+          border-top-left-radius: 50%;
+
+          &:hover .iconBox {
+            transform: scale(1.1);
+          }
+
+          &::before {
+            position: absolute;
+            content: "";
+            bottom: 0.375rem;
+            left: -1.25rem;
+            background: transparent;
+            width: 1.25rem;
+            height: 1.25rem;
+            border-bottom-right-radius: 1.25rem;
+            box-shadow: 0.313rem 0.313rem 0 0.313rem #fff;
+          }
+
+          &::after {
+            position: absolute;
+            content: "";
+            top: -1.25rem;
+            right: 0.375rem;
+            background: transparent;
+            width: 1.25rem;
+            height: 1.25rem;
+            border-bottom-right-radius: 1.25rem;
+            box-shadow: 0.313rem 0.313rem 0 0.313rem var(--clr);
+          }
+
+          .iconBox {
+            position: absolute;
+            inset: 0.625rem;
+            background: #282828;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: 0.3s;
+
+            span {
+              color: #fff;
+              font-size: 1.5rem;
+            }
+          }
+        }
+      }
+    }
+
+
   </style>
   <!-- Icons. Uncomment required icon fonts -->
   <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
@@ -602,7 +738,7 @@
               </div>
               Nemo & Nautilus Shipping 
 
-                 <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz (Nov 20th 2023 - May 10th</div>
+                 <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz (Nov 20th 2023 - May 25th)</div>
               </div>
               
               <div class="container-fluid " id="searchresult">
@@ -712,7 +848,7 @@
                     <p class="loading-message">Loading..</p>
                   </div>
                   
-
+                  <div style=''>
                   <div class="card mt-3"> 
                     <div class="d-flex justify-content-between p-2 ps-4 pe-4">
                                               <span><a href="./birthday.html">Birthday Reminder</a></span>
@@ -729,6 +865,7 @@
                     </div>
                      
                     </div>
+                   
                     <div class=" rounded-3  mt-3">
                       <h4 class="text-dark text-center card p-3 mb-0">Today's Progress <div id="datetime" style="font-size: 14px;" class="text-primary p-3 pb-0"></div></h4>
                     <div class="row">
@@ -956,13 +1093,9 @@
 
 
                         </div>
-                        
-                        <div class="d-flex justify-content-end mt-5 mb-3">
-                          <span  style="font-size: 12px;">Nautilus Shipping</span>
+                    </div>
 
-                      </div>
-                    
-              </div>
+     
               
                      
                   </div>
