--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -519,11 +519,11 @@
               </ul>
             </div>
           </nav>
-  <div class="p-5 pt-3">
-    <a class=" btn btn-primary float-end" href="./indexpage.html">Back to Dashboard</a>
+  <div class="p-4 pt-3 ">
+    <a class=" btn btn-primary mb-3" href="./indexpage.html">Back to Dashboard</a>
 
-    <div>
-      <h2>All Queries</h2>
+    <div class="card p-3 mb-3">
+      <h4 class="text-primary pt-2">All Queries</h4>
 
       <table class="table">
         <thead>
