--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -719,6 +719,9 @@
 
             <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
               <!-- Search -->
+              <div class="icon-container me-3 ">
+                <i class="bx" id="icon"></i>
+            </div>
               <div class="navbar-nav align-items-center w-100">
 
                 <!-- <div class="nav-item d-flex align-items-center">
@@ -733,13 +736,12 @@
                   />
                 
                 </div> -->
-                 <div class="icon-container me-3 ">
-                  <i class="bx" id="icon"></i>
-              </div>
+                 
               Nemo & Nautilus Shipping 
 
                  <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz (Nov 20th 2023 - May 25th)</div>
               </div>
+              <button class="btn btn-primary p-0 pe-2 ms-5 ps-2">Daily&nbsp;Dashboard</button>
               
               <div class="container-fluid " id="searchresult">
                 <div class="text-center fw-bold ">
