--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -741,7 +741,7 @@
 
                  <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz (Nov 20th 2023 - May 25th)</div>
               </div>
-              <button class="btn btn-primary p-0 pe-2 ms-5 ps-2">Daily&nbsp;Dashboard</button>
+              <!-- <button class="btn btn-primary p-0 pe-2 ms-5 ps-2">Daily&nbsp;Dashboard</button> -->
               
               <div class="container-fluid " id="searchresult">
                 <div class="text-center fw-bold ">
