--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -608,7 +608,7 @@
                     loader.style.display = 'block';
                     error.style.display = 'none';
     
-                    axios.get('http://localhost:4000/candidate/birthday', {
+                    axios.get('https://nemo.ivistaz.co/candidate/birthday', {
                         params: { date },
                         headers: { "Authorization": token }
                     })
