--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -858,13 +858,17 @@
                         </div>
                         
                         <span class="fw-medium d-block mb-1">Todays Calls:</span>
+                        <div id="spinnerContainer1">
+                          <!-- Spinner 1 will be dynamically inserted here -->
+                        
                         <h3 class="card-title mb-2">
                             <div id="callCount"></div>
                         </h3>
                         <small class="fw-medium">
                             <i id="arrowIcon" class="bx"></i>
                             <span id="percentageChange"></span>
-                        </small>
+                        </small></div>
+
                       </div>
                     </div>
                     
@@ -889,6 +893,8 @@
                         </div>
                         
                         <span class="fw-medium d-block mb-1">Proposed:</span>
+                        <div id="spinnerContainer2">
+
                         <h3 class="card-title mb-2">
                             <div id="proposedCount"></div>
                         </h3>
@@ -898,6 +904,7 @@
                             <span id="proposedPercentageChange"></span>
 
                         </small>
+                        </div>
                       </div>
                     </div>
 
@@ -919,6 +926,8 @@
                         </div>
                         
                         <span class="fw-medium d-block mb-1">Approved:</span>
+                        <div id="spinnerContainer3">
+
                         <h3 class="card-title mb-2">
                             <div id="approvedCount"></div>
                         </h3>
@@ -927,6 +936,7 @@
                             <span id="approvedArrowIcon"></span>
                             <span id="approvedPercentageChange"></span>
                         </small>
+                        </div>
                       </div>
                     </div>
 
@@ -948,6 +958,8 @@
                         </div>
                         
                         <span class="fw-medium d-block mb-1">Joined:</span>
+                        <div id="spinnerContainer4">
+
                         <h3 class="card-title mb-2">
                             <div id="joinedCount"></div>
                         </h3>
@@ -956,6 +968,7 @@
                             <span id="joinedArrowIcon"></span>
                             <span id="joinedPercentageChange"></span>
                         </small>
+                        </div>
                       </div>
                     </div>
 
@@ -977,6 +990,8 @@
                         </div>
                         
                         <span class="fw-medium d-block mb-1">Rejected:</span>
+                        <div id="spinnerContainer5">
+
                         <h3 class="card-title mb-2">
                             <div id="rejectedCount"></div>
                         </h3>
@@ -986,6 +1001,7 @@
                             <span id="rejectedArrowIcon"></span>
                             <span id="rejectedPercentageChange"></span>
                         </small>
+                        </div>
                       </div>
                     </div>
                     </div>
